# nautilus_trader

./: .codespellrc  .pre-commit-config.yaml  .typos.toml  Cargo.toml  Makefile  RELEASES.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: .env.nautilus_trader  install-nautilus_trader-devenv.sh
.docker/: nautilus_trader.dockerfile
.github/workflows/: build-v2.yml  build.yml  cli-binaries.yml
.supply-chain/: config.toml
crates/adapters/alpaca/: Cargo.toml  INTEGRATION_COMPLETE.md  PYTHON_BINDINGS_ADDED.md  README.md
crates/adapters/alpaca/src/: config.rs  error.rs  factories.rs  lib.rs
crates/adapters/alpaca/src/common/: consts.rs  credential.rs  enums.rs  mod.rs  models.rs  parse.rs  urls.rs
crates/adapters/alpaca/src/data/: mod.rs  types.rs
crates/adapters/alpaca/src/execution/: account.rs  mod.rs  reports.rs  types.rs
crates/adapters/alpaca/src/http/: client.rs  error.rs  mod.rs  models.rs  parse.rs
crates/adapters/alpaca/src/margin/: mod.rs
crates/adapters/alpaca/src/providers/: mod.rs  parsers.rs
crates/adapters/alpaca/src/python/: data.rs  enums.rs  execution.rs  http.rs  margin.rs  mod.rs  parse.rs  providers.rs  types.rs  websocket.rs
crates/adapters/alpaca/src/websocket/: client.rs  handler.rs  messages.rs  mod.rs
crates/adapters/alpaca/tests/: margin_standalone_test.rs
crates/adapters/binance/: Cargo.toml
crates/backtest/src/: exchange.rs
crates/common/: Cargo.toml
crates/common/benches/: msgbus.rs
crates/data/tests/: engine.rs
crates/execution/tests/: matching_engine.rs
crates/live/src/: manager.rs  runner.rs
crates/live/tests/: manager.rs
crates/portfolio/src/: portfolio.rs
crates/pyo3/: Cargo.toml
crates/pyo3/src/: lib.rs
crates/system/: Cargo.toml
crates/system/src/: kernel.rs
examples/live/alpaca/: alpaca_crypto_scalper.py  alpaca_data_tester.py  alpaca_equity_ema_cross.py  alpaca_options_spread_trader.py
nautilus_trader/backtest/: engine.pxd  engine.pyx
nautilus_trader/common/: config.py
nautilus_trader/live/: execution_engine.py
(+87 files in other folders)
